--- a/web/app/themes/Foody/resources/sass/pages/recipe/_recipe.scss
+++ b/web/app/themes/Foody/resources/sass/pages/recipe/_recipe.scss
@@ -1562,7 +1562,7 @@ $content-width: 95%;
 
     .cover-image.old{
       margin-bottom: 10px;
-      margin-top: 10px;
+      margin-top: 0px;
     }
     article.content {
       width: $content-width;
@@ -1811,6 +1811,7 @@ $content-width: 95%;
             display: flex;
             justify-content: space-between;
             padding: 0;
+            padding-right: 10px;
             align-items: center;
 
             .wrapper {
